# image-augmentation-ml

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
classifer/: minh.txt
classifier/: minh.txt  note for ryan.txt
classifier/agent/: Basic CNN - CIFAR 10.ipynb  cifar_net.pth
classifier/basic-nn-imagenette/: Basic CNN - Imagenette.ipynb  Preprocess Images 320 px.ipynb
classifier/basic-nn-imagenette/pickled_images/: noisy_imagenette_training_images_size_32.pkl  noisy_imagenette_training_labels_size_32.pkl
configs/augmentation/: affine.yaml  all.yaml  frequency.yaml  intensity.yaml  original.yaml
configs/classifier/: default.yaml
image_aug_ml/augmentation/: __init__.py  augment.py
image_aug_ml/augmentation/affine/: __init__.py  affine_transform.py  flip.py  resize.py  rotate.py  translate.py
image_aug_ml/augmentation/frequency/: __init__.py  bandpass_filt.py  freq_filter.py  highpass_filt.py  lowpass_filt.py
image_aug_ml/augmentation/intensity/: __init__.py  amf.py  hist_eq.py  invert.py
image_aug_ml/classifier/: __init__.py  classifier.py
image_aug_ml/utils/: __init__.py  file_utils.py  load_utils.py  save_utils.py
scripts/: augment.py  classify.py  classify_runner.sh  evaluate.py  plot_results.py
