[metadata]
name = image-augmentation-ml
version = 0.0.1
author = Ryan Singman
author_email = ryanjs@vt.edu
description = Finding the optimal set of iamge augmentations for image classification
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ryansingman/image-augmentation-ml
project_urls = 
    Issue Tracker = https://github.com/ryansingman/image-augmentation-ml/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pyyaml >= 5.4.1
    opencv-python >= 4.5.1.48

[flake8]
max-line-length = 100
per-file-ignores = __init__.py:F401
